[package]
edition = "2024"
name    = "windows-dwarfs-tools"
version = "0.3.0"

[dependencies]
anyhow  = "1"
assert2 = "0.3.15"
clap    = { version = "4.5", features = ["derive"] }
once-fn = "0.2.0"
rfd     = "0.15"
windows = { version = "0.58.0", features = ["Win32_Storage_FileSystem"] }
winreg  = "0.55"
zstd    = "0.13"

[dev-dependencies]

[build-dependencies]
zstd = "0.13"

[profile.release]
lto       = "fat"
opt-level = "z"
panic     = "abort"
strip     = true
